<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/main_tv_usernamelab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tv_namelab" />

            <TextView
                android:id="@+id/main_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tv_name" />

            <DigitalClock
                android:id="@+id/digitalClock1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:text="DigitalClock" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" 
            android:layout_weight="1">

            <ImageView
                android:id="@+id/main_imgv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >

            <Button
                android:id="@+id/main_btn_callcam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/main_btn_callcam" />

            <Button
                android:id="@+id/main_btn_rec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/main_btn_rec" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>